--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -18,9 +18,12 @@ views:
         show_header_toggle: false
       - type: entities
         entities:
+          - light.yardlight
           - light.porch_light
           - light.cree_connected_a_19_60w_equivalent_fe067982_10
           - light.cree_connected_a_19_60w_equivalent_fe04b14c_10
+          - light.rgb_light_1  
+          - light.rgb_light_2  
           - light.upstairs_bedroom
           - lock.front_door 
           - lock.garage_door
@@ -67,6 +70,8 @@ views:
       - type: entities
         entities:
           - switch.garage_outside
+          - light.yardlight
+          - light.shop_outside_east   
           - light.sengled_e11_g13_03074c6b_1
           - light.sengled_e11_g13_03076ad2_1
           - light.sengled_e11_g13_03077131_1
@@ -216,5 +221,5 @@ views:
           - sensor.pool_pressure
           - sensor.cleaner_pressure
         title: pool
-        show_header_toggle: true
+        show_header_toggle: false
 
