--- a/sensors.yaml
+++ b/sensors.yaml
@@ -154,8 +154,32 @@
   unit_of_measurement: '%'
   value_template: '{{value | round(1) }}' 
 
+- platform: filter
+  name: "f14789t"
+  entity_id: sensor.14789t
+  filters:
+    - filter: outlier
+      window_size: 4
+      radius: 2.0
+    - filter: lowpass
+      time_constant: 10
+    - filter: time_simple_moving_average
+      window_size: "00:05"
+      precision: 2
 
 
+- platform: filter
+  name: "f14789h"
+  entity_id: sensor.14789h
+  filters:
+    - filter: outlier
+      window_size: 4
+      radius: 2.0
+    - filter: lowpass
+      time_constant: 10
+    - filter: time_simple_moving_average
+      window_size: "00:05"
+      precision: 2
 
 - platform: mqtt
   name: "AQ Temperature 1"
